--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -75,6 +75,7 @@ footer .logo__wrapper {
     display: flex;
     flex-direction: column;
     padding: 28px 24px;
+    min-height: 600px;
   }
 }
 
