--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -103,6 +103,30 @@ footer .logo__wrapper {
     width: 100%;
     font-family: 'Arial', serif;
     color: $black;
+
+    h1{
+      line-height: 1.3;
+      margin: 1.6em 0 0.64em;
+    }
+
+    h2{
+      line-height: 1.4;
+      margin: 1.6em 0 0.64em;
+    }
+
+    h3{
+      line-height: 1.5;
+      margin: 1.6em 0 0.64em;
+    }
+
+    ul{
+      margin-left: 0.625em;
+
+      li {
+        margin-bottom: 0.5em;
+        margin-left: 1.25em;
+      }
+    }
   }
 }
 
