--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -94,38 +94,36 @@ footer .logo__wrapper {
     padding-bottom: 16px;
   }
   &__date {
-    font-family: 'Arial', serif;
     font-size: 16px;
     color: #746F6F;
     margin-bottom: 32px;
   }
   &__content {
     width: 100%;
-    font-family: 'Arial', serif;
     color: $black;
 
-    h1{
+    & ul{
+      margin-left: 0.625em;
+
+      & li {
+        margin-bottom: 0.5em;
+        margin-left: 1.25em;
+      }
+    }
+
+    & h1{
       line-height: 1.3;
       margin: 1.6em 0 0.64em;
     }
 
-    h2{
+    & h2{
       line-height: 1.4;
       margin: 1.6em 0 0.64em;
     }
 
-    h3{
+    & h3{
       line-height: 1.5;
       margin: 1.6em 0 0.64em;
-    }
-
-    ul{
-      margin-left: 0.625em;
-
-      li {
-        margin-bottom: 0.5em;
-        margin-left: 1.25em;
-      }
     }
   }
 }
