--- a/src/styles/mains.scss
+++ b/src/styles/mains.scss
@@ -37,7 +37,7 @@ header {
   max-width: 55%;
 
   &__wrapper {
-    margin: 30px 0 10px;
+    padding: 10px 0;
     width: 100%;
     height: auto;
     display: flex;
@@ -102,13 +102,21 @@ footer .logo__wrapper {
     width: 100%;
     color: $black;
 
-    & ul{
+    & p{
+      padding-bottom: 16px;
+    }
+
+    & ul,& ol{
       margin-left: 0.625em;
 
       & li {
         margin-bottom: 0.5em;
         margin-left: 1.25em;
       }
+    }
+
+    & img{
+      max-width: 100%;
     }
 
     & h1{
@@ -133,6 +141,7 @@ footer .logo__wrapper {
   flex-direction: column;
   text-decoration: none;
   padding: 24px 16px;
+  border-top: 1px solid #3301010a;
   box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 20px;
   border-radius: 12px;
